Actualizacion de textos

--- a/django/vivilox/vivilox/templates/feedback/feedback.html
+++ b/django/vivilox/vivilox/templates/feedback/feedback.html
@@ -109,7 +109,7 @@
                     </div>
                     <hr>
                 {% empty %}
-                    <p>Sorry, you don't have any new feedback. 
+                    <p>Sorry, you don't have any new feedback. <br>
 In the meantime check out more <a href="/contest.all/">CONTESTS!</a></p>
                 {% endfor %}
             </div>
@@ -137,7 +137,7 @@ In the meantime check out more <a href="/contest.all/">CONTESTS!</a></p>
                     {% endautoescape %}
                     <hr>
                 {% empty %}
-                    <p>Sorry, you don't have any new feedback. 
+                    <p>Sorry, you don't have any new feedback. <br> 
 In the meantime check out more <a href="/contest.all/">CONTESTS!</a></p>
                 {% endfor %}
             </div>
