--- a/django/vivilox/vivilox/templates/forms/contest/categories.html
+++ b/django/vivilox/vivilox/templates/forms/contest/categories.html
@@ -9,6 +9,7 @@
         <div class="span4 step2"><h4 class=''><span>Step2: Contest Details</span></h4></div>
         <div class="span4 step3"><h4 class=''><span>Step 3: Pay Contest</span></h4></div>
     </div>
+    <h3 id="cat_name">Select the category that best describes the project you need Concept Art for.</h3>
 	<div class="row">
 		{% for c in cats  %}
 			<div class="span6 add-contest">
