--- a/django/vivilox/vivilox/templates/forms/contest/build_contest.html
+++ b/django/vivilox/vivilox/templates/forms/contest/build_contest.html
@@ -25,7 +25,7 @@
 			{% else %}
 				<div class="control-group">
 			{% endif %}
-				<label class="control-label" for="name">Name Contest:</label>
+				<label class="control-label" for="name">Contest Name:</label>
 				<div class="controls">
 					{{ frmContest.name }}
 					{% if frmContest.name.errors %}
