--- a/django/vivilox/vivilox/templates/home/home.html
+++ b/django/vivilox/vivilox/templates/home/home.html
@@ -28,18 +28,16 @@
                                         <img src="{{ STATIC_URL }}img/slide/Slide_01.jpg" data-thumb="{{ STATIC_URL }}img/slide/slide_01.jpg" alt=""  />
                                         <img src="{{ STATIC_URL }}img/slide/Slide_02.jpg" data-thumb="{{ STATIC_URL }}img/slide/slide_02.jpg" alt=""  />
                                         <img src="{{ STATIC_URL }}img/slide/Slide_03.jpg" data-thumb="{{ STATIC_URL }}img/slide/slide_03.jpg" alt=""  />
-  					<img src="{{ STATIC_URL }}img/slide/Slide_04.jpg" data-thumb="{{ STATIC_URL }}img/slide/slide_04.jpg" alt=""  /> 
-					<img src="{{ STATIC_URL }}img/slide/Slide_05.jpg" data-thumb="{{ STATIC_URL }}img/slide/slide_05.jpg" alt=""  />
+                      					<img src="{{ STATIC_URL }}img/slide/Slide_04.jpg" data-thumb="{{ STATIC_URL }}img/slide/slide_04.jpg" alt=""  /> 
+                    					<img src="{{ STATIC_URL }}img/slide/Slide_05.jpg" data-thumb="{{ STATIC_URL }}img/slide/slide_05.jpg" alt=""  />
                                     </div>
                                 </div>
                         </div>
                     </div>
                 </div>
 
-                    <div class="row color-box">
-                    
-
-			<div class="video-home span4">
+            <div class="row color-box">
+ 			<div class="video-home span4">
                         <div id="embed-video-home">
                             <img id="video_" src="{{ STATIC_URL }}img/video-placeholder.jpg" alt="Vivilox">
                         </div>
@@ -82,14 +80,15 @@
                             <div class="span2">
                              {% thumbnail contest.logo "140x110" crop="50% center" as im %}
                                 <a href="{% url contest_details_view contest.id  %}">
-                                <div class="wrapper_thumb" style="width:{{im.width}}; height:{{im.height}};" >
+                                <div class="wrapper_thumb" style="width:{{im.width}}px; height:{{im.height}}px;" >
                                     <img class="img_thumb" src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{contest.name}}" />
-                                    <div class="description_thumb" style="width:{{im.width}}; height:{{im.height}};" >
+                                    <div class="description_thumb" style="width:{{im.width}}px; height:{{im.height}}px;" >
                                         <div class="description_content_thumb">
                                             <p>
                                             <span class="cat">{{contest.category}}</span><br>
                                             <span class="title">{{contest.name}}</span><br>
-                                            {{contest.description|truncatewords:5}}</p>
+                                            {{contest.description|truncatewords:5}}
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
@@ -111,14 +110,15 @@
                             <div class="span2">
                             {% thumbnail item.image_sample "140x110" crop="50% center" as im %}
                                <a class="" href="{% url image_details_view item.id  %}">
-                                <div class="wrapper_thumb" style="width:{{im.width}}; height:{{im.height}};" >
+                                <div class="wrapper_thumb" style="width:{{im.width}}px; height:{{im.height}}px;" >
                                     <img class="img_thumb" src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{contest.name}}" />
-                                    <div class="description_thumb" style="width:{{im.width}}; height:{{im.height}};" >
+                                    <div class="description_thumb" style="width:{{im.width}}px; height:{{im.height}}px;" >
                                         <div class="description_content_thumb">
                                             <p>
-                                            <span class="cat">{{item.category}}</span><br>
-                                            <span class="title">{{item.title}}</span><br>
-                                            {{item.description|truncatewords:5}}</p>
+                                                <span class="cat">{{item.category}}</span><br>
+                                                <span class="title">{{item.title}}</span><br>
+                                                {{item.description|truncatewords:5}}
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
