--- a/django/vivilox/vivilox/templates/message/message_client.html
+++ b/django/vivilox/vivilox/templates/message/message_client.html
@@ -3,19 +3,22 @@
 {% block title %} Message for {{user.name}} {% endblock %}
 
 {% block content %}
-<div class="container">
-	<div class="row">
-        	<!--  Project Full Details  -->
-              <h3>{{title}}</h3>
-               <div class="border-top span12">
-                    <p>
-                      {% autoescape off %}
-                        {{message}}
-                      {% endautoescape %}
-                    	
-                    </p>
-                    <p>Return to <a href="{% url main_view %}" title="">Home</a></p>
-                </div>
-    </div>
-</div>
+	<div class="container">
+		<div class="row">
+	        <!--  Project Full Details  -->
+			<h3>{{title}}</h3>
+			<div class="span12">
+			<div class="mono-message">	
+				<div class="monito">
+					<img src="{{STATIC_URL}}img/monito.png" />
+				</div>
+				<div class="message">
+					{% autoescape off %}
+						{{message}}
+					{% endautoescape %}
+				</div>
+			</div>
+			</div>
+	    </div>
+	</div>
 {% endblock content %}
