--- a/django/vivilox/vivilox/templates/home/home.html
+++ b/django/vivilox/vivilox/templates/home/home.html
@@ -9,16 +9,7 @@
 
 {% block content %}	
 
-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa <br>    
-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa <br>    
-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa <br>    
-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa <br>    
-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa <br>    
-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa <br>    
-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa <br>    
-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa <br>    
-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa <br>    
-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa <br>
+TEST VIVILOX DEPLOY GIT
 
 {% load thumbnail %}
             <div class="container">
