--- a/django/vivilox/vivilox/templates/home/home.html
+++ b/django/vivilox/vivilox/templates/home/home.html
@@ -9,7 +9,7 @@
 
 {% block content %}	
 
-TEST VIVILOX DEPLOY GIT
+TEST VIVILOX DEPLOY GIT NEW TEST (anaranjo | fau09)
 
 {% load thumbnail %}
             <div class="container">
